--- a/src/pulsey.css
+++ b/src/pulsey.css
@@ -14,7 +14,7 @@ body {
   box-sizing: border-box;
 }
 
-.wrapper .ps-anchor {
+.wrapper .pt-anchor {
   background: #f67b45;
   width: 300px;
   height: 100px;
